<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentUser">

    <TextView
        android:id="@+id/usernameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/joinedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/joined_date"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/id"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/newPassEt"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:gravity="center_vertical"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/black"
        android:text="@string/change_password"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/netflix_red"
        android:text="@string/delete_account"
        android:textColor="@color/white" />

</FrameLayout>